--- a/.github/workflows/build-immortalwrt-imagebuilder.yml
+++ b/.github/workflows/build-immortalwrt-imagebuilder.yml
@@ -83,12 +83,13 @@ jobs:
         set -Eeuo pipefail
         cd "$IMAGEBUILDER_DIR"
         TGT="bin/targets/x86/64"
-        # 解压镜像（ext4 与 squashfs）
+        # 解压镜像
         gunzip -f "$TGT/immortalwrt-$VERSION-x86-64-generic-ext4-combined.img.gz"
-        gunzip -f "$TGT/immortalwrt-$VERSION-x86-64-generic-squashfs-combined.img.gz"
 
         # 复制生成的镜像
         cp "$TGT"/*combined.img output/
+
+        ls -al output
 
         # 转换为 VMDK 格式
         qemu-img convert -f raw -O vmdk \
