--- a/.github/workflows/build-immortalwrt-imagebuilder.yml
+++ b/.github/workflows/build-immortalwrt-imagebuilder.yml
@@ -76,7 +76,7 @@ jobs:
       run: |
         set -Eeuo pipefail
         cd "$IMAGEBUILDER_DIR"
-        make image PACKAGES="-bnx2-firmware -dnsmasq dnsmasq-full luci luci-i18n-base-zh-cn kmod-e100 kmod-e1000 kmod-vmxnet3 kmod-wireguard open-vm-tools lrzsz daed v2ray-geoip daed-geoip v2ray-geosite daed-geosite luci-app-daed luci-i18n-daed-zh-cn" FILES="files"
+        make image PACKAGES="-bnx2-firmware -dnsmasq dnsmasq-full luci luci-i18n-base-zh-cn kmod-e100 kmod-e1000 kmod-vmxnet3 kmod-wireguard open-vm-tools lrzsz unzip wget-ssl curl daed v2ray-geoip daed-geoip v2ray-geosite daed-geosite luci-app-daed luci-i18n-daed-zh-cn" FILES="files"
 
     - name: Generate OVA Files
       run: |
